--- a/src/pages/services/wine-cellar-repair.astro
+++ b/src/pages/services/wine-cellar-repair.astro
@@ -174,9 +174,9 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-wine-cooler/1-wine-cooler.webp"
+                  src="/wine-сellar/1-wine-сellar.webp"
                   loading="lazy"
-                  width="350px"
+                  width="400px"
                   height="500px"
                   alt="Wine Cellar Repair"
                 />
@@ -230,8 +230,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-wine-cooler/2-wine-cooler.webp"
-                  width="500px"
+                  src="/wine-сellar/2-wine-сellar.webp"
+                  width="300px"
                   height="500px"
                   alt="Wine Cellar Repair"
                   loading="lazy"
@@ -297,8 +297,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-wine-cooler/3-wine-cooler.webp"
-                  width="500px"
+                  src="/wine-сellar/3-wine-сellar.webp"
+                  width="450px"
                   height="500px"
                   alt="Wine Cellar Repair"
                   loading="lazy"
@@ -832,7 +832,7 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-wine-cooler/commercial-wine-cooler-1.webp"
+                  src="/wine-сellar/4-wine-сellar.webp"
                   width="400px"
                   height="500px"
                   alt="Wine Cellar Repair"
@@ -1213,7 +1213,7 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-wine-cooler/commercial-wine-cooler-2.webp"
+                  src="/wine-сellar/5-wine-сellar.webp"
                   width="400px"
                   height="500px"
                   alt="Wine Cooler Repair"
@@ -1306,7 +1306,7 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                src="/commercial-wine-cooler/commercial-wine-cooler-4.webp"
+                src="/wine-сellar/6-wine-сellar.webp"
                   width="400px"
                   height="500px"
                   alt="Wine Cooler Repair"
