--- a/src/pages/services/bar-refrigerator-repair.astro
+++ b/src/pages/services/bar-refrigerator-repair.astro
@@ -20,7 +20,7 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full walk-in-cooler-page-header-d-full">
+        <div class="page-header-d-full bar-refrigerator-page-header-d-full">
           <div class="page-header-d">
             <h1>
               <span class="animate-charcter">Bar Refrigerator <br> Repair</span>
@@ -31,7 +31,7 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
-            src="/commercial-slushie-machine/bar-refrigerator-page_header_photos.webp"
+            src="/refrigerator-repair/bar-refrigerator-page_header_photos.webp"
             alt="Bar Refrigerator Repair"
             loading="lazy"
           />
@@ -462,6 +462,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/whirlpool.webp"
                       alt="Whirlpool"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -473,6 +474,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/frigidaire.webp"
                       alt="Frigidaire"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -484,6 +486,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/GE-general-electric.webp"
                       alt="Elmeco"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -495,6 +498,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/samsung.webp"
                       alt="Samsung"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -506,6 +510,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/lg.webp"
                       alt="LG"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -517,6 +522,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kitchenAid.webp"
                       alt="KitchenAid"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -528,6 +534,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/danby.webp"
                       alt="Danby"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -539,6 +546,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/haier.webp"
                       alt="Haier"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -550,6 +558,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/marvel.webp"
                       alt="Marvel"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -561,6 +570,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/perlick.webp"
                       alt="Perlick"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -572,6 +582,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/u-line.webp"
                       alt="U-Line"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -583,6 +594,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/avanti.webp"
                       alt="Avanti"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -594,6 +606,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/summit.webp"
                       alt="Summit"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -605,6 +618,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/magic-chef.webp"
                       alt="Magic Chef"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -616,6 +630,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/electrolux.webp"
                       alt="Electrolux"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -627,6 +642,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/bosch.webp"
                       alt="Bosch"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -638,6 +654,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kenmore.webp"
                       alt="Kenmore"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -649,6 +666,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/sub-zero.webp"
                       alt="Sub-Zero"
+                      loading="lazy"
                     />
                   </a>
                 </div>
