--- a/src/pages/services/wine-cooler-repair.astro
+++ b/src/pages/services/wine-cooler-repair.astro
@@ -155,7 +155,6 @@ import "css/service/style_services.css";
               <p>
                 If you’re experiencing issues with your wine cooler, it’s essential to address them promptly to ensure your collection remains at the optimal temperature. At Same Day Appliance Repair, we specialize in wine cooler repairs and offer competitive pricing to make the process as smooth as possible for you. The cost of repairing a wine cooler can vary depending on the issue's complexity, the parts required, and the cooler's make and model. On average, minor repairs such as fixing a thermostat or replacing a door seal can range from <b>$100 to $250</b>. More complex issues, such as compressor or motor replacements, may cost between <b>$300 and $500</b>.
               </p>
-
               <p>
                 We understand that unexpected appliance repairs can strain your budget, which is why we offer transparent pricing and detailed estimates before beginning any work. Our technicians are trained to diagnose problems quickly and accurately, ensuring you only pay for the necessary repairs. We also provide a warranty on our parts and labor, giving you peace of mind that your wine cooler will continue to perform optimally long after the repair is completed. For precise pricing tailored to your specific situation, don’t hesitate to contact Same Day Appliance Repair for a consultation and estimate.
               </p>
@@ -454,6 +453,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/whirlpool.webp"
                       alt="Whirlpool"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -465,6 +465,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/sub-zero.webp"
                       alt="Sub-Zero"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -476,6 +477,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/viking.webp"
                       alt="Viking"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -487,6 +489,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/thermador.webp"
                       alt="Thermador"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -498,6 +501,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/u-line.webp"
                       alt="U-Line"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -509,6 +513,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/monogram.webp"
                       alt="Monogram"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -520,6 +525,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/jennAir.webp"
                       alt="Jenn-Air"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -531,6 +537,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kitchenAid.webp"
                       alt="KitchenAid"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -542,6 +549,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/frigidaire.webp"
                       alt="Frigidaire"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -553,6 +561,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/marvel.webp"
                       alt="Marvel"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -564,6 +573,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/bosch.webp"
                       alt="Bosch"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -575,6 +585,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/haier.webp"
                       alt="Haier"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -586,6 +597,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/avanti.webp"
                       alt="Avanti"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -597,6 +609,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/danby.webp"
                       alt="Danby"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -608,6 +621,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/edgeStar.webp"
                       alt="EdgeStar"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -619,6 +633,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/vinotemp.webp"
                       alt="Vinotempr"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -630,6 +645,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/euroCave.webp"
                       alt="EuroCave"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -641,6 +657,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/perlick.webp"
                       alt="Perlick"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -652,6 +669,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/true-residential.webp"
                       alt="True Residential"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -663,6 +681,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/summit.webp"
                       alt="Summit"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -674,6 +693,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/electrolux.webp"
                       alt="Electrolux"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -685,6 +705,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/miele.webp"
                       alt="Miele"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -696,6 +717,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/la-sommeliere.webp"
                       alt="La Sommelière"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -707,6 +729,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/liebherr.webp"
                       alt="Liebherr"
+                      loading="lazy"
                     />
                   </a>
                 </div>
