--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -1566,7 +1566,8 @@ main {
 @media (max-width:1440px) {
 
     .wine-cooler-page-header-d-full,
-    .wine-cellar-page-header-d-full {
+    .wine-cellar-page-header-d-full,
+    .bar-refrigerator-page-header-d-full {
         padding-top: clamp(5%, 8vh, 10%);
         padding-bottom: clamp(3%, 3vh, 10%);
     }
@@ -1578,7 +1579,7 @@ main {
 
 
 }
- 
+
 
 
 
