--- a/src/pages/services/commercial-oven-repair.astro
+++ b/src/pages/services/commercial-oven-repair.astro
@@ -20,7 +20,7 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full oven-page-header-d-full">
+        <div class="page-header-d-full commercial-oven-page-header-d-full">
           <div class="page-header-d">
             <h1>
               <span class="animate-charcter">Commercial Oven <br> Repair</span>
@@ -31,7 +31,7 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
-            src="/oven-repair/oven-machines-page_header_photos.webp"
+            src="/commercial-oven-stove/commercial-oven-page_header_photos.webp"
             alt="Commercial Oven Repair"
             loading="lazy"
           />
