--- a/src/pages/services/bar-refrigerator-repair.astro
+++ b/src/pages/services/bar-refrigerator-repair.astro
@@ -175,9 +175,9 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-slushie-machine/commercial-slushie-machine-1.webp"
+                  src="/refrigerator-repair/1-bar-refrigerator.webp"
                   loading="lazy"
-                  width="400px"
+                  width="350px"
                   height="500px"
                   alt="Bar Refrigerator Repair"
                 />
@@ -233,8 +233,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-slushie-machine/commercial-slushie-machine-2.webp"
-                  width="400px"
+                  src="/refrigerator-repair/2-bar-refrigerator.webp"
+                  width="350px"
                   height="500px"
                   alt="Bar Refrigerator Repair"
                   loading="lazy"
@@ -266,8 +266,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-slushie-machine/commercial-slushie-machine-3.webp"
-                  width="400px"
+                  src="/refrigerator-repair/3-bar-refrigerator.webp"
+                  width="350px"
                   height="500px"
                   alt="Bar Refrigerator Repair"
                   loading="lazy"
@@ -765,8 +765,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-slushie-machine/commercial-slushie-machine-4.webp"
-                  width="400px"
+                  src="/refrigerator-repair/4-bar-refrigerator.webp"
+                  width="350px"
                   height="500px"
                   alt="Bar Refrigerator Repair"
                   loading="lazy"
@@ -1086,8 +1086,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-slushie-machine/commercial-slushie-machine-5.webp"
-                  width="400px"
+                  src="/refrigerator-repair/5-bar-refrigerator.webp"
+                  width="350px"
                   height="500px"
                   alt="Bar Refrigerator Repair"
                   loading="lazy"
@@ -1196,8 +1196,8 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc content__page-full-desc-ph-ri">
               <div class="content__page-desc-phot">
                 <img
-                  src="/commercial-slushie-machine/commercial-slushie-machine-6.webp"
-                  width="400px"
+                  src="/refrigerator-repair/6-bar-refrigerator.webp"
+                  width="350px"
                   height="500px"
                   alt="Bar Refrigerator Repair"
                   loading="lazy"
@@ -1325,7 +1325,7 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc">
               <div class="content__page-desc">
                 <p>
-                  The cost of repairing a bar refrigerator can vary based on the nature of the issue, as well as the brand and model of the appliance. Typically, most bar refrigerator repairs range between $150 and $300. Our technician will first diagnose the problem to provide you with an accurate estimate. Following the diagnosis, you'll receive a detailed price breakdown, helping you make an informed decision about whether to repair or replace your bar refrigerator. We also offer recommendations should a replacement be more cost-effective.
+                  The cost of repairing a bar refrigerator can vary based on the nature of the issue, as well as the brand and model of the appliance. Typically, most bar refrigerator repairs range between <b>$150 and $300</b>. Our technician will first diagnose the problem to provide you with an accurate estimate. Following the diagnosis, you'll receive a detailed price breakdown, helping you make an informed decision about whether to repair or replace your bar refrigerator. We also offer recommendations should a replacement be more cost-effective.
                 </p>
               </div>
             </div>
