--- a/src/pages/services/commercial-oven-repair.astro
+++ b/src/pages/services/commercial-oven-repair.astro
@@ -479,7 +479,7 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/turboChef.webp"
+                      src="/brand-logos/turbochef.webp"
                       alt="TurboChef"
                       loading="lazy"
                     />
@@ -587,7 +587,7 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/cleveland.webp"
+                      src="/brand-logos/сleveland.webp"
                       alt="Cleveland"
                       loading="lazy"
                     />
