--- a/src/components/css-components/style-contactbtn.css
+++ b/src/components/css-components/style-contactbtn.css
@@ -16,7 +16,8 @@
   max-width: 345px;
   display: inline-flex;
   margin: 15px 0px;
-  z-index: 1;
+  position: relative;
+  z-index: 2;
 }
 
 .contact-button-book-global {
