--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -127,7 +127,6 @@ main {
 }
 
 
-
 .page-header-f {
     position: absolute;
     width: 100%;
@@ -1569,7 +1568,8 @@ main {
     .wine-cooler-page-header-d-full,
     .wine-cellar-page-header-d-full,
     .bar-refrigerator-page-header-d-full,
-    .commercial-oven-page-header-d-full {
+    .commercial-oven-page-header-d-full,
+    .commercial-dishwasher-page-header-d-full {
         padding-top: clamp(5%, 8vh, 10%);
         padding-bottom: clamp(3%, 3vh, 10%);
     }
@@ -1601,9 +1601,18 @@ main {
 
     /* .washer-page-header-d-full, */
     .wine-cooler-page-header-d-full,
-    .wine-cellar-page-header-d-full {
+    .wine-cellar-page-header-d-full,
+    .commercial-oven-page-header-d-full{
         padding-top: clamp(2%, 2vh, 10%);
         padding-bottom: clamp(1%, 2vh, 10%);
+    }
+
+    .commercial-dishwasher-page-header-d-full .animate-charcter{
+        white-space: wrap;
+    }
+
+    .commercial-dishwasher-page-header-d-full {
+        padding: 2% 0;
     }
 
     .content__page-full-desc {
