--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -28,7 +28,8 @@ const menuitems = [
       { title: "Wine Cooler Repair", path: "/services/wine-cooler-repair" },
       { title: "Wine Cellar Repair", path: "/services/wine-cellar-repair" },
       { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair" },
-      { title: "Furnace-repair", path: "/services/furnace-repair" },
+      { title: "Furnace Repair", path: "/services/furnace-repair" },
+      { title: "Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair" },
     ],
   },
   {
@@ -47,10 +48,13 @@ const menuitems = [
         title: "Commercial Dishwasher Repair",
         path: "/services/commercial-dishwasher-repair",
       },
-      {
-        title: "Commercial Dryer Repair",
-        path: "/services/commercial-dryer-repair",
-      },
+      {title: "Commercial Dryer Repair", path: "/services/commercial-dryer-repair"},
+      {title: "Commercial Oven Repair", path: "/services/commercial-oven-repair"},
+      {title: "Commercial Showcase Refrigerator Repair", path: "/services/commercial-showcase-refrigerator-repair"},
+      {title: "Commercial Walk in Cooler Repair", path: "/services/commercial-walk-in-cooler-repair"},
+      {title: "Commercial Walk in Freezer  Repair", path: "/services/commercial-freezer-in-cooler-repair"},
+      {title: "Commercial Ice Machine Repair", path: "/services/commercial-ice-machine-repair"},
+      {title: "Commercial Slushie Machine Repair", path: "/services/commercial-slushie-machine-repair"},
     ],
   },
 
