--- a/src/pages/services/commercial-dishwasher-repair.astro
+++ b/src/pages/services/commercial-dishwasher-repair.astro
@@ -838,7 +838,7 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/champion.webp"
+                      src="/brand-logos/сhampion.webp"
                       alt="Champion"
                       loading="lazy"
                     />
@@ -1019,7 +1019,7 @@ import "css/service/style_services.css";
                       width="300px"
                       height="300px"
                       src="/brand-logos/american-dish-service.webp"
-                      alt="American Dish Service (ADS)"
+                      alt="American Dish Service"
                       loading="lazy"
                     />
                   </a>
@@ -1122,7 +1122,7 @@ import "css/service/style_services.css";
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-18">
-                  <h3><a href="#">American Dish Service (ADS)</a></h3>
+                  <h3><a href="#">American Dish Service</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-19">
