--- a/src/pages/services/freezer-repair.astro
+++ b/src/pages/services/freezer-repair.astro
@@ -2078,7 +2078,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="content__page-desc">
-                <h3>Decision Matrix</h3>
+                <h3 style="text-align: center;">Decision Matrix</h3>
 
                 <table class="costTable costTable-Factor">
                   <tbody
