--- a/src/components/css-components/style-reviews-full.css
+++ b/src/components/css-components/style-reviews-full.css
@@ -10,3 +10,137 @@
 }
 
 
+
+.page-reviews__container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 1.5em;
+}
+
+
+
+
+
+.content-page {
+  width: 100%;
+  max-width: 400px;
+  
+
+  position: relative;
+  transition: background-color 0.1s ease 0s;
+  box-sizing: border-box;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  padding: 24px;
+  background-color: rgb(248, 248, 248);
+  /* border: 1px solid transparent; */
+  box-shadow: 0 0 1px 1.5px #87878730;
+  border-radius: 34px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.content-a {
+  display: flex;
+  margin-bottom: 14px;
+}
+
+
+
+.avatar-a {
+  margin-right: 10px;
+}
+
+.avatar-a img{
+width: 40px;
+border-radius: 50%;
+}
+
+.desc-name-a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.desc-name-a:hover {
+  text-decoration: underline;
+}
+
+.desc-name-a b {
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 600;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+
+.date-a p{
+font-size: 12px;
+color: rgb(65, 65, 65);
+}
+
+
+
+
+
+
+
+
+
+
+.desc-name-a a{
+  display: flex;
+}
+
+.desc-name-a svg {
+  width: 100%;
+  max-width: 16px;
+  height: auto;
+  margin-left: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.stars-b {
+  display: flex;
+  margin-bottom: 5px;
+}
+
+.stars-b svg {
+  max-width: 14px;
+  max-height: 14px;
+  width: 100%;
+}
+
+.google-b {
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.google-b svg{
+  width: 100%;
+  max-width: 100px;
+  height: auto;
+}
