--- a/src/pages/services/induction-cooktop-repair.astro
+++ b/src/pages/services/induction-cooktop-repair.astro
@@ -1,10 +1,30 @@
 ---
+import Layout from "@layouts/Layout.astro";
+import Container from "@components/container.astro";
+import Contactbtn from "@components/contactbtn.astro";
+import Btn from "@components/btn.astro";
+import Cta from "@components/cta.astro";
+import Navbar from "@components/navbar/navbar.astro";
+import Reviews from "@components/reviews.astro";
+import Arrow from "@components/js/arrow-phone.astro";
+import Focus from "@components/js/focus-menu.astro";
+import Faqs from "@components/js/faqs.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
+
+
+
 import ReviewsFull from "@components/reviews-full.astro";
 ---
+
+<Navbar />
+<Reviews />
+<Layout title="Walk-in Cooler Repair">
+  <Container></Container>
+
 <h1>Induction Cooktop Repair</h1>
 <br><br>
 
-<!-- <p>
+<p>
 Repairing an induction cooktop can be a cost-effective solution compared to replacing the entire unit, but the price can vary widely based on the nature of the issue and the brand of your cooktop. For minor issues, such as a malfunctioning touchpad or a blown fuse, you might expect to pay between $100 to $200 for parts and labor. These repairs are relatively straightforward and can often be completed within a couple of hours by a qualified technician. 
 
 For more complex problems, such as issues with the induction coils or the main control board, the costs can rise significantly. Replacing an induction coil can cost between $200 to $500, depending on the model and availability of parts. If the main control board needs to be replaced, you could be looking at a bill of $300 to $600 or more, including labor. It's important to get a detailed estimate before proceeding with any repairs, as high costs can sometimes make replacing the cooktop a more viable option, especially if your unit is older and out of warranty. Always ensure that any technician you hire is certified and experienced with induction cooktops to avoid further damage and ensure a proper fix.
@@ -810,7 +830,7 @@ Can a power surge damage my induction cooktop?
 Yes, power surges can damage the electronic components of an induction cooktop. Using a surge protector can help prevent damage.
 </p>
 
- -->
+
 
 
 
@@ -825,3 +845,32 @@ Yes, power surges can damage the electronic components of an induction cooktop. 
 
 
 <ReviewsFull />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<Cta />
+</Container>
+
+<Arrow />
+<Focus />
+<Faqs />
+</Layout>
+<LogoBrands />
