--- a/src/components/css-components/style-reviews-full.css
+++ b/src/components/css-components/style-reviews-full.css
@@ -37,7 +37,7 @@
   flex-grow: 1; */
   padding: 24px;
   background-color: rgb(248, 248, 248);
-  box-shadow: 0 0 1px 1.5px #87878730;
+  box-shadow: 0 0 0.5px 1px #87878730;
   border-radius: 34px;
 }
 
@@ -151,7 +151,11 @@
   height: 114px;
   overflow: hidden;
   margin-bottom: 5px;
+  /* display: -webkit-box;
+  -webkit-line-clamp: inherit;
+  -webkit-box-orient: vertical; */
 }
+
 
 .description-b p {
   color: rgb(27, 27, 27);
@@ -206,4 +210,124 @@ display: none;
   width: 100%;
   max-width: 100px;
   height: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.any_task_content {
+  display: grid;
+}
+
+.any_task_cont_selection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  padding: 2%;
+  max-width: 700px;
+  justify-self: center;
+}
+
+.any_task_cont_selection h5 {
+  font-size: 1.3rem;
+  transform: scale(1, 1.2);
+  font-family: 'SemiBold';
+}
+
+.sel_3d h5,
+.sel_vid h5,
+.sel_graph h5 {
+  color: #454545;
+  cursor: pointer;
+}
+
+.sel_3d h5:hover,
+.sel_vid h5:hover,
+.sel_graph h5:hover {
+  color: #000;
+  transition: color 0.3s ease;
+}
+
+
+
+.con_fill {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2%;
+}
+
+.con_fill img {
+  width: 100%;
+}
+
+.bb_y {
+  display: grid;
+  padding: 0 2%;
+  justify-content: center;
+  justify-self: center;
+  overflow: hidden;
+  align-self: center;
+}
+
+#video_editing {
+  display: none;
+}
+
+#graphic_arts {
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
+.sel_still h5{
+  color: #FFC501;
+  text-shadow: 0.4px 0.4px 0.4px #000;
+  transition: color 0.3s ease;
+}
+
+.sel_still h5:hover {
+  color: #304a98;
 }
